// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Button Outline danger renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-danger btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline dark renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-dark btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline info renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-info btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline light renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-light btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline link renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-link btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline primary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline secondary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-secondary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline success renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-success btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button Outline warning renders correctly 1`] = `
<jest>
  <button
    class="btn btn-outline-warning btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button danger renders correctly 1`] = `
<jest>
  <button
    class="btn btn-danger btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button dark renders correctly 1`] = `
<jest>
  <button
    class="btn btn-dark btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button info renders correctly 1`] = `
<jest>
  <button
    class="btn btn-info btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button lg renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-lg"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button light renders correctly 1`] = `
<jest>
  <button
    class="btn btn-light btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button link renders correctly 1`] = `
<jest>
  <button
    class="btn btn-link btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button md renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button primary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button secondary renders correctly 1`] = `
<jest>
  <button
    class="btn btn-secondary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button sm renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-sm"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button success renders correctly 1`] = `
<jest>
  <button
    class="btn btn-success btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button warning renders correctly 1`] = `
<jest>
  <button
    class="btn btn-warning btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button with icon renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button with popover renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Button with popover
  </button>
</jest>
`;

exports[`OE - Button with spinner renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    <div
      class="spinner-border spinner-border-sm"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    Label
  </button>
</jest>
`;

exports[`OE - Button with text not wrapping renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md text-nowrap"
    type="button"
  >
    Label
  </button>
</jest>
`;

exports[`OE - Button with toggle renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Button with collapse
  </button>
</jest>
`;

exports[`OE - Button with tooltip renders correctly 1`] = `
<jest>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Button with tooltip
  </button>
</jest>
`;
